fix: dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -80,6 +80,7 @@ body:not(:-moz-handler-blocked) fieldset {
   margin-top: 0.3125rem;
   margin-right: 1rem;
   border-radius: 1rem;
+  background-color: var(--bt-color-1-after);
 
   transition: all 0.3s;
   position: relative;
@@ -175,6 +176,11 @@ ul {
 .p__error{
   color: #C2431E;
   font-size: small;
+}
+p{
+  color: var(--font-color);
+  padding: 0;
+  margin-right: 3rem;
 }
 h2{
   color: var(--font-color-h2-pri);
